# BasicDataStructuresAndAlgorithms

./: .travis.yml  pom.xml
algorithm/: pom.xml
algorithm/src/main/resources/sorts/: Sorts.java
c/: .gitignore  CMakeLists.txt
c/Ds/Bag/: Bag.cpp  Bag.h  BagIterator.h  BagTest.cpp
c/Ds/Sorting/: Insertion.cpp  Merge.cpp  Quick.cpp  Shell.cpp
c/Resource/02_hk_dynamic_array/: test.0.in
c/Source/: Main.cpp
c/Source/00_global/: Global.h
c/Source/01_string_length/: StringLength.cpp  StringLength.h
c/Source/02_hk_dynamic_array/: DynamicArray.cpp  DynamicArray.h
c/Source/03_reverse_array/: ReverseArray.cpp
c/Source/04_left_shift/: LeftShift.cpp
c/Source/06_plus_minus/: PlusMinus.cpp
c/Source/09_jumping_on_cloud/: JumpingOnCloud.cpp
c/Source/11_new_year_chaos/: NewYearChaos.cpp
c/Source/13_frequency_query/: FrequencyQuery.cpp
c/Source/14_bubble_sort/: BubbleSort.cpp
c/Source/15_mark_and_toys/: MarkAndToys.cpp
c/Source/16_comparator/: Comparator.cpp
c/Source/17_fraudulent_activity_notifications/: FraudulentActivityNotifications.cpp
c/Source/18_merge_sort_counting/: MergeSortCounting.cpp
c/Source/19_making_anagrams/: MakingAnagrams.cpp
c/Source/20_alternating_characters/: AlternatingCharacters.cpp
c/Source/21_valid_string/: ValidString.cpp
c/Source/22_special_string/: SpecialString.cpp
c/Source/23_common_child/: CommonChild.cpp
c/Source/25_greedy_point_cover/: GreedyPointCover.cpp
c/Source/27_term_sum/: TermSum.cpp
c/Source/28_absolute_minimum_diff/: AbsoluteMinimumDiff.cpp
c/Source/29_lucky_balance/: LuckyBalance.cpp
c/Source/30_greedy_florist/: GreedyFlorist.cpp
c/Source/33_flipping_bits/: FlippingBits.cpp
c/Test/: TestRunner.cpp
c/Test/Cases/: StringLengthTest.cpp
c/Test/Cases/01_string_length/: StringLengthTest.cpp  StringLengthTest.h
c/Test/Cases/02_hk_dynamic_array/: DynamicArrayTest.cpp  DynamicArrayTest.h
c/Test/Tester/: Cmake.h  Cmake.h.in  SourceDirLocation.h  TestRunner.cpp  TestSuite.h  Tester.cpp  Tester.h
c/algo/exers/00_global/: Global.h
c/algo/exers/05_matching_strings/: MatchingStrings.cpp
c/algo/exers/07_sales_by_match/: SalesByMatch.cpp
c/algo/exers/08_counting_valley/: CountingValley.cpp
c/algo/exers/10_repeated_string/: RepeatedString.cpp
c/algo/exers/12_ransom_note/: RansomNote.cpp
c/algo/exers/17_fraudulent_activity_notifications/: FraudulentActivityNotifications.cpp
c/algo/exers/18_merge_sort_counting/: MergeSortCounting.cpp
c/algo/exers/24_cream_parlor/: CreamParlor.cpp
c/algo/exers/26_max_backpack/: MaxBackPack.cpp
c/algo/exers/31_max_min/: MaxMin.cpp
c/algo/exers/32_specific_linked_list/: SpecificLinkedList.cpp
c/algo/exers/34_special_division/: SpecialDivision.cpp
c/algo/exers/35_two_sum_number/: TwoSumNumber.cpp
c/algo/exers/36_subsequence/: Subsequence.cpp
c/algo/sorting/: Insertion.cpp  Merge.cpp  Quick.cpp  Selection.cpp  Shell.cpp
c/ds/: CMakeLists.txt
c/ds/bag/: Bag.cpp  Bag.h  BagIterator.cpp  BagIterator.h  BagTest.cpp
c/ds/bst/: Bst.cpp  Bst.h  BstTest.cpp
c/ds/queue/: Queue.cpp  Queue.h  QueueTest.cpp
c/ds/src/: BagTest.cpp
c/ds/stack/: Stack.cpp  Stack.h  StackTest.cpp
c/ds/utils/: DsUtils.h  ForwardIterator.h
c/test/: TestRunner.cpp
c/test/Cases/01_string_length/: StringLengthTest.cpp
c/test/Tester/: Tester.h
c/test/cases/01_string_length/: StringLengthTest.cpp
c/test/cases/02_hk_dynamic_array/: DynamicArrayTest.cpp
c/test/tester/: SourceDirLocation.h.in  Tester.cpp
certification/: pom.xml
concurrency/: pom.xml
interview/: pom.xml
jvm/: pom.xml
language/: pom.xml
language/src/main/java/language/labmdas/examples/: Main.java
language/src/main/java/language/labmdas/exersByMe/: Application.java  TODO.java
src/main/java/: Main.java
src/main/java/com/saiu/: Main.java
src/main/java/com/saiu/algorithms/codeWars/: Abbreviator.java
src/main/java/com/saiu/algorithms/findingNumberInThreeArrays/: NumberInArrayFinder.java
src/main/java/com/saiu/algorithms/maxDepthBinaryTree/: Depth.java
src/main/java/com/saiu/algorithms/officeVisitors/: OfficeVisitors.java  TimeStamp.java
src/main/java/com/saiu/dataStructures/deck/: Deck.java  (+1 more)
src/main/java/deck/: Deck.java
src/main/java/dobleSearchTree/: List.java  SearchTree.java  TreeList.java
src/main/java/doubleLinkedList/: DoubleLinkedList.java
src/main/java/doubleSearchTree/: SearchTree.java  TreeList.java
src/main/java/dynamicArray/: DynamicArray.java
src/main/java/exceptions/: MistakenArraySize.java  MistakenDeckSize.java  MistakenIndex.java  MistakenSearchTreeSize.java  MistakenStackSize.java  MistakenTreeListKey.java
src/main/java/fixArray/: FixArray.java
src/main/java/simpleLinkedList/: LinkedList.java
src/main/java/stack/: Stack.java
src/main/resources/: application.properties
src/test/java/doubleLinkedList/: DoubleLinkedListTest.java
src/test/java/dynamicArray/: DynamicArrayTest.java
src/test/java/fixArray/: FixArrayTest.java
src/test/java/simpleLinkedList/: LinkedListTest.java
src/test/java/stack/: StackTest.java
src/test/java/testSupport/: TestUtils.java
stratification/: pom.xml
structure/: pom.xml
structure/src/main/java/structure/deck/: Deck.java
structure/src/main/java/structure/doubleLinkedList/: DoubleLinkedList.java  doubleLinkedList.info
structure/src/main/java/structure/doubleSearchTree/: SearchTree.java  TreeList.java  doubleSearchTree.info
structure/src/main/java/structure/dynamicArray/: Array.java
structure/src/main/java/structure/exceptions/: IncorrectIndexException.java  MistakenDeckSize.java  MistakenSearchTreeSize.java  MistakenStackSize.java  MistakenTreeListKey.java
structure/src/main/java/structure/fixedArray/: FixedArray.java
structure/src/main/java/structure/hashTable/: ChainHashTable.java  DoubleHashTable.java  HashTable.java  PrimitiveHashTableKeyInt.java
structure/src/main/java/structure/queue/: Queue.java
structure/src/main/java/structure/simpleLinkedList/: LinkedList.java
structure/src/main/java/structure/stack/: Stack.java
structure/src/main/java/structure/utils/: SystemUtils.java
(+411 files in other folders)
